[gd_scene load_steps=4 format=3 uid="uid://bnwcnvv0tsngf"]

[ext_resource type="Script" path="res://Prefabs/GroundTower.gd" id="1_mg8ys"]
[ext_resource type="Texture2D" uid="uid://fgj033ytlnoa" path="res://Textures/spike_sheet.png" id="1_wgnyu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_efyy1"]
radius = 7.0

[node name="GroundTower" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_mg8ys")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_efyy1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_wgnyu")
hframes = 2

[node name="DamageCD" type="Timer" parent="."]
wait_time = 0.05

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
